testsuite/tests/typecheck/should_fail/T17021.stderr

T17021.hs:18:5: error:
    A levity-polymorphic type is not allowed here:
      Type: Int
      Kind: TYPE (Id 'LiftedRep)
    When trying to create a variable of type: Int
